Beginning the Major Project - 2 implementing Partials

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -7,6 +7,18 @@
     <title><%= title %></title>
 </head>
 <body>
+
+      <!-- partial for header  -->
+      <%- include('_header'); %>
+    
+
+
     <h1>USERS / <%= title %> </h1>
+
+
+       
+    <!-- partial for footer -->
+
+    <%- include('_footer'); %>
 </body>
 </html>
