--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,18 @@
     <title><%= title%></title>
 </head>
 <body>
+    <!-- partial for header  -->
+    <%- include('_header'); %>
+    
+    
+    
     <h1>Codeial / <%=title%></h1>
+   
+   
+   
+    <!-- partial for footer -->
+
+    <%- include('_footer'); %>
+
 </body>
 </html>
