--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-</head>
+<!-- body for layout.ejs  -->
 <body>
-
-      <!-- partial for header  -->
-      <%- include('_header'); %>
+  
     
-
-
-    <h1>USERS / <%= title %> </h1>
-
-
-       
-    <!-- partial for footer -->
-
-    <%- include('_footer'); %>
+    
+    
+    <h1>Codeial / <%=title%></h1>
+   
+   
 </body>
-</html>
