--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,4 +1,7 @@
 <!-- body for layout.ejs  -->
+
+<!-- will be linked using set static layouts in layouts page  -->
+<link rel="stylesheet" href="/css/user_profile.css">
 <body>
   
     
