--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,3 +1,9 @@
 <body>
     <h1>Sign in page</h1>
+    <form action="/users/create-session" method="POST">
+        <input type="email" name="email" id="" placeholder="email" required>
+        <input type="password" name="password" id="" placeholder="Password" required>
+        <input type="submit" value="sign in ">
+        
+    </form>
 </body>
