--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,3 +1,13 @@
 <body>
     <h1>Sign up page</h1>
+
+    <form action="/users/create" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your email" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <input type="password" name="confirm_password" placeholder="Confirm your Password" required>
+
+        <input type="submit" value="Sign up">
+
+    </form>
 </body>
