--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,58 +19,7 @@
             <ul>
                 <!-- POST -->
                 <% for(post of posts) { %>
-                    <li>
-                        <p>
-                            <% if(locals.user && locals.user.id==post.user.id) { %>
-                                <small>
-                                    <a href="/posts/destroy/<%= post.id %>">X</a>
-                                </small>    
-                            
-                                <% } %>
-                            
-                            <%= post.content %>
-                            <br>
-                            <small>
-                                <%= post.user.name %>
-                            </small>
-                        </p>
-                        <!-- POST COMMENTS  -->
-                        <div class="post-comments">
-                            <% if(locals.user) {%>
-                                
-                                 <form action="/comments/create" method="POST">
-                                     <input type="text" name="content" placeholder="type here to add comments..">
-                                     <!-- sending hidden data  -->
-                                     <input type="hidden" name="post" value="<%= post._id %>">
-                                     <input type="submit" value="Add Comment">
-
-                                 </form>
-                            <% } %>
-                        </div>
-
-
-                        <div id="post-comments-list">
-                            <ul id="post-comments-<%= post._id %>" >
-                                 <% for( comments of post.Comments) {%>
-                                    <p>
-                                        <% if(locals.user && locals.user.id==comments.user.id) { %>
-                                            <small>
-                                                <a href="/comments/destroy/<%=comments.id%>">X</a>
-                                            </small>    
-                                        
-                                         <% } %>
-                                        
-                                        <%= comments.content %>
-                                        <br>
-                                        <small>
-                                            <%= comments.user.name %>
-                                        </small>
-                                    </p>
-                                    
-                                 <% } %>
-                            </ul>
-                        </div>
-                    </li>
+                        <%- include('_posts') -%>
                     <% } %>
             </ul>
         </div>
