Updating the users Profile and Adding user profiel as friends

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -9,8 +9,20 @@
     
     <h1>Codeial / <%=title%></h1>
    
-    <p><%= user.name%></p>
-    <p><%= user.email%></p>
+    <!-- usedd user here because it is now on locals after using passport -->
+ 
 
+    <% if(user.id == profile_user.id) {%>
+        <!-- if user matches show the form to him  -->
+        <form action="/users/update/<%= profile_user.id %>" method="POST">
+            <input type="text"  name="name"  placeholder="Your name" value="<%= profile_user.name %>" required>
+            <input type="text"  name="email"  placeholder="Your Email" value="<%= profile_user.email %>" required> 
+            <input type="submit" value="update">
+        </form>
+        <%} else{  %>
+            <!-- show just profile data to him  -->
+            <p><%= profile_user.name%></p>
+            <p><%= profile_user.email%></p>
+        <%}%>
    
 </body>
