--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,10 +19,21 @@
             <ul>
                 <!-- POST -->
                 <% for(post of posts) { %>
+                    <!-- partials for posts  -->
                         <%- include('_posts') -%>
                     <% } %>
             </ul>
         </div>
+    </section>
+
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users) { %>
+            <p>
+                <a href="/users/profile/<%= u.id%>"> <%= u.name %></a>
+            </p>
+            
+            <% } %>
     </section>
    
 </body>
