--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,8 @@
 <!-- body for layout.ejs  -->
-<body>
-  
-    
-    
-    
-    <h1>Codeial / <%=title%></h1>
+<link rel="stylesheet" href="/css/home.css">
+
+<div id="home-container">
+    <!-- <h1>Codeial / <%=title%></h1> -->
    
     <section id="feed-posts">   
         <h4>Posts</h4>
@@ -36,4 +34,5 @@
             <% } %>
     </section>
    
-</body>
+
+</div>
