--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -14,9 +14,11 @@
 
     <% if(user.id == profile_user.id) {%>
         <!-- if user matches show the form to him  -->
-        <form action="/users/update/<%= profile_user.id %>" method="POST">
+        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
             <input type="text"  name="name"  placeholder="Your name" value="<%= profile_user.name %>" required>
             <input type="text"  name="email"  placeholder="Your Email" value="<%= profile_user.email %>" required> 
+
+            <input type="file" name="avatar" placeholder="Profile Picture">
             <input type="submit" value="update">
         </form>
         <%} else{  %>
