--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 <body>
   
+    <!-- //adding user avatar image  -->
+    <img src="<%= user.avatar %>" alt="<%= user.name%>" width="100">
     
-    
-    
-    <h1>Codeial / <%=title%></h1>
+    <!-- <h1>Codeial / <%=title%></h1> -->
    
     <!-- usedd user here because it is now on locals after using passport -->
  
