--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -6,4 +6,8 @@
         <input type="submit" value="sign in ">
         
     </form>
+
+    <p>
+        <a href="/users/auth/google">google Signin / Sign up</a>
+    </p>
 </body>
