--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -10,4 +10,8 @@
         <input type="submit" value="Sign up">
 
     </form>
+
+    <p>
+        <a href="/users/auth/google">google Signin / Sign up</a>
+    </p>
 </body>
