--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,6 @@
 <!-- header partial  -->
 <header>
-   page header
+   <!-- page header -->
    
    <ul>
        <% if (locals.user) { %>
@@ -14,18 +14,43 @@
            <a href="/users/sign-out"> Sign out</a>
         </li>
 
+        
         <% }else{ %>
 
-        <li>
+        <!-- <li>
             <a href="/users/sign-in">Sign In</a>
         </li>
  
         <li>
             <a href="/users/sign-up">Sign up</a>
 
-         </li>
+         </li> -->
+
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Chat2vibe</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/users/sign-in">Sign in <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign-up">Sign up <span class="sr-only">(current)</span></a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </nav>
+
 
         <% }%>
 
    </ul>   
+
+
+
+
 </header>
