--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,5 +1,5 @@
-<body>
-    <h1>Sign in page</h1>
+<body >
+    <!-- <h1>Sign in page</h1>
     <form action="/users/create-session" method="POST">
         <input type="email" name="email" id="" placeholder="email" required>
         <input type="password" name="password" id="" placeholder="Password" required>
@@ -9,5 +9,25 @@
 
     <p>
         <a href="/users/auth/google">google Signin / Sign up</a>
-    </p>
+    </p> -->
+
+
+<div class="container-fluid" style="display: flex; align-items: center; margin-top: 100px; margin-left: 30vw; border: 4px solid; width: 500px;">
+    <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1" >Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="width: 200px;">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" style="width: 200px;">
+        </div>
+        <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
 </body>
