--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -27,7 +27,9 @@
          </li> -->
 
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Chat2vibe</a>
+            <a class="navbar-brand" href="/" style="color: #ae00ff;">Chat2vibe
+                
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
