--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,13 +14,39 @@
         </form>
         <% } %>
         <div id="post-list-container">
-            <ul>
-                <!-- POST -->
-                <% for(post of posts) { %>
-                    <!-- partials for posts  -->
-                        <%- include('_posts') -%>
-                    <% } %>
-            </ul>
+            <div class="container">
+                <div class="row">
+                   <div class="col-md-12">
+                     
+                       
+                         <div class="profile-content">
+                            <!-- begin tab-content -->
+                            <div class="tab-content p-0">
+                               <!-- begin #profile-post tab -->
+                               <div class="tab-pane fade active show" id="profile-post">
+                                  <!-- begin timeline -->
+                                  <ul class="timeline">
+                                    
+                                        <!-- POST -->
+                                        <% for(post of posts) { %>
+                                            <!-- partials for posts  -->
+                                            
+                                            <%- include('_posts') -%>
+                                            <% } %>
+                                    
+                                    </ul>
+                                  <!-- end timeline -->
+                               </div>
+                               <!-- end #profile-post tab -->
+                            </div>
+                            <!-- end tab-content -->
+                         </div>
+                         <!-- end profile-content -->
+                      </div>
+                   </div>
+                </div>
+             </div>
+            
         </div>
     </section>
 
