--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,9 +2,9 @@
 <header>
    <!-- page header -->
    
-   <ul>
+  
        <% if (locals.user) { %>
-       <li>
+       <!-- <li>
            <a href="/users/profile/<%= user.id %>">
                <%= user.name %>
            </a>
@@ -12,9 +12,30 @@
 
        <li>
            <a href="/users/sign-out"> Sign out</a>
-        </li>
+        </li> -->
 
-        
+        <!-- <div class="container-fluid" style="width: 100%;"> -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%; margin-left: 0px; top: 0px;">
+            <a class="navbar-brand" href="/" style="color: #ae00ff;">Chat2vibe
+                
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/users/profile/<%= user.id %>"><%= user.name %> <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/sign-out">Sign Out <span class="sr-only">(current)</span></a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </nav>
+        <!-- </div> -->
         <% }else{ %>
 
         <!-- <li>
@@ -50,7 +71,7 @@
 
         <% }%>
 
-   </ul>   
+  
 
 
 
