--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -63,7 +63,7 @@
                 <!-- Email input -->
                 <div class="form-outline mb-4">
                     <label class="form-label" for="form3Example3">Email address</label>
-                  <input type="email" id="form3Example3" class="form-control form-control-lg"
+                  <input type="email" name="email" id="form3Example3" class="form-control form-control-lg"
                     placeholder="Enter a valid email address" />
                   
                 </div>
@@ -71,19 +71,19 @@
                 <!-- Password input -->
                 <div class="form-outline mb-3">
                     <label class="form-label" for="form3Example4">Password</label>
-                  <input type="password" id="form3Example4" class="form-control form-control-lg"
+                  <input type="password" name="password" id="form3Example4" class="form-control form-control-lg"
                     placeholder="Enter password" />
                   
                 </div>
       
                 <div class="d-flex justify-content-between align-items-center">
                   <!-- Checkbox -->
-                  <div class="form-check mb-0">
+                  <!-- <div class="form-check mb-0">
                     <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
                     <label class="form-check-label" for="form2Example3">
                       Remember me
                     </label>
-                  </div>
+                  </div> -->
                   <a href="#!" class="text-body">Forgot password?</a>
                 </div>
       
