--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,7 +13,7 @@
 #user-friends{
     width: 30%;
     padding: 10px;
-    border-left: 2px solid lightgray;
+    /* border-left: 2px solid lightgray; */
     height: inherit;
 }
 
