--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,12 @@
 <!-- header partial  -->
+
+<style>
+ 
+
+
+
+
+</style>
 <header>
    <!-- page header -->
    
@@ -26,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/users/profile/<%= user.id %>"><%= user.name %> <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/users/profile/<%= user.id %>" style=""><%= user.name %> <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users/sign-out">Sign Out <span class="sr-only">(current)</span></a>
