--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,30 +1,232 @@
-<!-- body for layout.ejs  -->
+<!-- body for layout.ejs 
 
-<!-- will be linked using set static layouts in layouts page  -->
-<link rel="stylesheet" href="/css/user_profile.css">
-<body>
+ will be linked using set static layouts in layouts page  -->
+<!-- <link rel="stylesheet" href="/css/user_profile.css"> -->
+
+
+<style>
+    .gradient-custom-2 {
+/* fallback for old browsers */
+background: #fbc2eb;
+
+/* Chrome 10-25, Safari 5.1-6 */
+background: -webkit-linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1));
+
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
+}
+
+#update-form{
+   display: none;
+}
+</style>
+<div class="h-100 gradient-custom-2">
+<section class="h-100 gradient-custom-2">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col col-lg-9 col-xl-7">
+          <div class="card">
+            <div class="rounded-top text-white d-flex flex-row" style="background-color: #000; height:200px;">
+              <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
+                <img src="<%= user.avatar %>" alt="<%= user.name%>" 
+                   class="img-fluid img-thumbnail mt-4 mb-2"
+                  style="width: 150px; z-index: 1; margin-left: 5px;">
+                <button id='update-button' type="button" class="btn btn-outline-dark" data-mdb-ripple-color="dark"
+                  style="z-index: 1; margin-left: 5px;">
+                  Edit profile
+                </button>
+                
+              </div>
+              <div class="ms-3" style="margin-top: 130px;margin-left: 30px;">
+                <h5><%= user.name%></h5>
+                <p>India</p>
+              </div>
+            </div>
+            <div class="p-4 text-black" style="background-color: #f8f9fa;">
+              <div class="d-flex justify-content-end text-center py-1">
+                <div>
+                  <p class="mb-1 h5">1</p>
+                  <p class="small text-muted mb-0">Posts</p>
+                </div>
+                <div class="px-3">
+                  <p class="mb-1 h5">3</p>
+                  <p class="small text-muted mb-0">comments</p>
+                </div>
+                
+              </div>
+            </div>
+            <div class="card-body p-4 text-black">
+             
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <% if(user.id == profile_user.id) {%>
+    <div id="update-form" class="container" style="background-color: white; padding: 10px; width: inherit;">
+        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
+            <div class="form-group" >
+                <label for="exampleInputEmail1">User name</label>
+                <input type="text"  name="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  value="<%= profile_user.name %>" >
+                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+            </div>
+            <div class="form-group" >
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="text" name="email"  value="<%= profile_user.email %>" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Upload new profile picture</label>
+              <input type="file" name="avatar" placeholder="Profile Picture">
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Update</button>
+        </form>
+
+
+        </div>
+        <%}%>
+</div>
+
+<script>
+    document.getElementById('update-button').addEventListener('click',function(e){
+        e.preventDefault();
+        document.getElementById('update-form').style.display='block';
+    })
+</script>
+
+
+
+
+<!-- <body> -->
   
     <!-- //adding user avatar image  -->
-    <img src="<%= user.avatar %>" alt="<%= user.name%>" width="100">
+    <!-- <img src="<%= user.avatar %>" alt="<%= user.name%>" width="100"> -->
     
     <!-- <h1>Codeial / <%=title%></h1> -->
    
     <!-- usedd user here because it is now on locals after using passport -->
  
 
-    <% if(user.id == profile_user.id) {%>
+    <!-- <% if(user.id == profile_user.id) {%> -->
         <!-- if user matches show the form to him  -->
-        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
+        <!-- <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
             <input type="text"  name="name"  placeholder="Your name" value="<%= profile_user.name %>" required>
             <input type="text"  name="email"  placeholder="Your Email" value="<%= profile_user.email %>" required> 
 
             <input type="file" name="avatar" placeholder="Profile Picture">
             <input type="submit" value="update">
-        </form>
-        <%} else{  %>
+        </form> -->
+        <!-- <%} else{  %> -->
             <!-- show just profile data to him  -->
-            <p><%= profile_user.name%></p>
+            <!-- <p><%= profile_user.name%></p>
             <p><%= profile_user.email%></p>
         <%}%>
-   
-</body>
+    -->
+<!-- </body>  -->
+
+
+<footer class="text-center text-lg-start bg-light text-muted">
+    <!-- Section: Social media -->
+    <section
+      class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+    >
+      <!-- Left -->
+      <div class="me-5 d-none d-lg-block">
+        <span>Get connected with us on social networks:</span>
+      </div>
+      <!-- Left -->
+  
+      <!-- Right -->
+      <div>
+        
+        <a href="chat2vibeofficial@gmail.com" class="me-4 text-reset">
+          <i class="fab fa-google"></i>
+        </a>
+        
+      </div>
+      <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+  
+    <!-- Section: Links  -->
+    <section class="">
+      <div class="container text-center text-md-start mt-5">
+        <!-- Grid row -->
+        <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+            <!-- Content -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              <i class="fas fa-gem me-3"></i>Chat2Vibe
+            </h6>
+            <!-- <p>
+              Here you can use rows and columns to organize your footer content. Lorem ipsum
+              dolor sit amet, consectetur adipisicing elit.
+            </p> -->
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Products
+            </h6>
+            <p>
+              <a href="/" class="text-reset">Chat2Vibe</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">About Us</a>
+            </p>
+            
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Useful links
+            </h6>
+            <p>
+              <a href="#!" class="text-reset">Profile Page</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">chats</a>
+            </p>
+            <p>
+              <a href="#!" class="text-reset">Friends</a>
+            </p>
+            
+          </div>
+          <!-- Grid column -->
+  
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+            <!-- Links -->
+            <h6 class="text-uppercase fw-bold mb-4">
+              Contact
+            </h6>
+            <p><i class="fas fa-home me-3"></i> Delhi, India</p>
+            <p>
+              <i class="fas fa-envelope me-3"></i>
+              chat2vibeofficial@gmail.com
+            </p>
+            <p><i class="fas fa-phone me-3"></i> +91 9643939034</p>
+           
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+      </div>
+    </section>
+    <!-- Section: Links  -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2022 Copyright:
+      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Chat2Vibe.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
