--- a/views/chat_box.ejs
+++ b/views/chat_box.ejs
@@ -119,10 +119,15 @@
   </section> -->
 
 <style>
+
+  #chat-windows{
+      position: fixed;
+      /* top: 400px; */
+      bottom: 300px;
+  }
     #user-chat-box {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+  /* position: fixed; */
+ 
   border: 1px dashed grey;
   height: 350px;
   width: 300px;
@@ -167,24 +172,98 @@
 
 </style>
   <!-- CHANGE :: Creat the code for chat box -->
-<% if (locals.user){ %>
-	<div id="user-chat-box">
-		<ul id="chat-messages-list">
-			<li class="other-message">
-				<span>Other Message</span>
-			</li>
-			<li class="self-message">
-				<span>
-					Self Message
-				</span>
-				
-			</li>
 
-		</ul>
-		<div id="chat-message-input-container">
-			<input id="chat-message-input" placeholder="Type message here">
-			<button id="send-message">Send</button>
-		</div>
+  <% if (locals.user){ %>
+  <div id="chat-windows" style="display: flex; flex-direction: row; ">
+    <!-- <div id="1" style="border: 4px solid; height: 100px;">
+    
+      <div id="user-chat-box">
+        <p></p>
+        <ul id="chat-messages-list">
+          <li class="other-message">
+            <span>Other Message</span>
+          </li>
+          <li class="self-message">
+            <span>
+              Self Message
+            </span>
+            
+          </li>
+    
+        </ul>
+        <div id="chat-message-input-container">
+          <input id="chat-message-input" placeholder="Type message here">
+          <button id="send-message">Send</button>
+        </div>
+        </div>
+   
+    </div>
 
-	</div>
-<% } %>
+    <div id="2" style="border: 4px solid; height: 100px;">
+    
+      <div id="user-chat-box">
+        <ul id="chat-messages-list">
+          <li class="other-message">
+            <span>Other Message</span>
+          </li>
+          <li class="self-message">
+            <span>
+              Self Message
+            </span>
+            
+          </li>
+    
+        </ul>
+        <div id="chat-message-input-container">
+          <input id="chat-message-input" placeholder="Type message here">
+          <button id="send-message">Send</button>
+        </div>
+      </div>
+   
+    </div>
+    <div id="3" style="border: 4px solid; height: 100px;">
+      <div id="user-chat-box">
+        <ul id="chat-messages-list">
+          <li class="other-message">
+            <span>Other Message</span>
+          </li>
+          <li class="self-message">
+            <span>
+              Self Message
+            </span>
+            
+          </li>
+    
+        </ul>
+        <div id="chat-message-input-container">
+          <input id="chat-message-input" placeholder="Type message here">
+          <button id="send-message">Send</button>
+        </div>
+    
+      </div>
+    </div> 
+  
+	 -->
+	
+
+  </div>
+  <% } %>
+
+
+<!-- <div id="user-chat-box" style="right: 20px;">
+  <ul id="chat-messages-list">
+    <li class="other-message">
+      <span>Other Message</span>
+    </li>
+    <li class="self-message">
+      <span>
+        Self Message
+      </span>
+      
+    </li>
+
+  </ul>
+  <div id="chat-message-input-container">
+    <input id="chat-message-input" placeholder="Type message here">
+    <button id="send-message">Send</button>
+  </div> -->
